--- a/stories/index.html
+++ b/stories/index.html
@@ -1578,6 +1578,18 @@
   </thead>
   <tbody>
     <tr>
+      <td>0003</td>
+      <td><a href="/stories/nl/0003_school-kleding_slides.html" target="_blank">School kleding</a></td>
+      <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsQXlkTjlCTlFMVEU"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="nl0003"></a><a href="http://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
+    </tr>
+    <tr>
+      <td>0008</td>
+      <td><a href="/stories/nl/0008_wat-ben-jij-aan-het-doen_slides.html" target="_blank">Wat ben jij aan het doen?</a></td>
+      <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsQXlkTjlCTlFMVEU"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="nl0008"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
+    </tr>
+    <tr>
       <td>0011</td>
       <td><a href="/stories/nl/0011_nsangabisibe-en-mudduawulira_slides.html" target="_blank">Nsangabisibe en Mudduawulira</a></td>
       <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsQXlkTjlCTlFMVEU"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
@@ -1588,6 +1600,12 @@
       <td><a href="/stories/nl/0106_namukurus-fiets_slides.html" target="_blank">Namukuru’s fiets</a></td>
       <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsQXlkTjlCTlFMVEU"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
       <td><a name="nl0106"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
+    </tr>
+    <tr>
+      <td>0112</td>
+      <td><a href="/stories/nl/0112_mijn-lichaam_slides.html" target="_blank">Mijn lichaam</a></td>
+      <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsQXlkTjlCTlFMVEU"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="nl0112"></a><a href="http://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
     </tr>
     <tr>
       <td>0136</td>
@@ -1612,6 +1630,18 @@
       <td><a href="/stories/nl/0266_bunty-en-bubbly_slides.html" target="_blank">Bunty en Bubbly</a></td>
       <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsQXlkTjlCTlFMVEU"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
       <td><a name="nl0266"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
+    </tr>
+    <tr>
+      <td>0271</td>
+      <td><a href="/stories/nl/0271_twee_slides.html" target="_blank">Twee</a></td>
+      <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsQXlkTjlCTlFMVEU"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="nl0271"></a><a href="http://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
+    </tr>
+    <tr>
+      <td>0302</td>
+      <td><a href="/stories/nl/0302_vuur_slides.html" target="_blank">Vuur</a></td>
+      <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsQXlkTjlCTlFMVEU"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="nl0302"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
     </tr>
     <tr>
       <td>0319</td>
@@ -6649,7 +6679,7 @@
       <td>0003</td>
       <td><a href="http://africanstorybook.org/stories/school-clothes">School clothes</a></td>
       <td><a href="https://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
-      <td><a href="#ar0003">ar</a>, <a href="#bn0003">bn</a>, <a href="#da0003">da</a>, <a href="#de0003">de</a>, <a href="#eo0003">eo</a>, <a href="#es0003">es</a>, <a href="#fa0003">fa</a>, <a href="#gu0003">gu</a>, <a href="#hi0003">hi</a>, <a href="#hu0003">hu</a>, <a href="#it0003">it</a>, <a href="#ja0003">ja</a>, <a href="#ko0003">ko</a>, <a href="#nb0003">nb</a>, <a href="#nn0003">nn</a>, <a href="#pa0003">pa</a>, <a href="#pl0003">pl</a>, <a href="#ru0003">ru</a>, <a href="#tl0003">tl</a>, <a href="#tr0003">tr</a>, <a href="#ur0003">ur</a>, <a href="#vi0003">vi</a>, <a href="#yue0003">yue</a>, <a href="#zh0003">zh</a></td>
+      <td><a href="#ar0003">ar</a>, <a href="#bn0003">bn</a>, <a href="#da0003">da</a>, <a href="#de0003">de</a>, <a href="#eo0003">eo</a>, <a href="#es0003">es</a>, <a href="#fa0003">fa</a>, <a href="#gu0003">gu</a>, <a href="#hi0003">hi</a>, <a href="#hu0003">hu</a>, <a href="#it0003">it</a>, <a href="#ja0003">ja</a>, <a href="#ko0003">ko</a>, <a href="#nb0003">nb</a>, <a href="#nl0003">nl</a>, <a href="#nn0003">nn</a>, <a href="#pa0003">pa</a>, <a href="#pl0003">pl</a>, <a href="#ru0003">ru</a>, <a href="#tl0003">tl</a>, <a href="#tr0003">tr</a>, <a href="#ur0003">ur</a>, <a href="#vi0003">vi</a>, <a href="#yue0003">yue</a>, <a href="#zh0003">zh</a></td>
     </tr>
     <tr>
       <td>0004</td>
@@ -6673,7 +6703,7 @@
       <td>0008</td>
       <td><a href="http://africanstorybook.org/stories/what-are-you-doing">What are you doing?</a></td>
       <td><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
-      <td><a href="#aeb0008">aeb</a>, <a href="#ar0008">ar</a>, <a href="#bn0008">bn</a>, <a href="#da0008">da</a>, <a href="#de0008">de</a>, <a href="#eo0008">eo</a>, <a href="#es0008">es</a>, <a href="#fa0008">fa</a>, <a href="#gu0008">gu</a>, <a href="#hi0008">hi</a>, <a href="#hu0008">hu</a>, <a href="#it0008">it</a>, <a href="#ja0008">ja</a>, <a href="#jam0008">jam</a>, <a href="#ko0008">ko</a>, <a href="#nb0008">nb</a>, <a href="#nn0008">nn</a>, <a href="#pa0008">pa</a>, <a href="#pl0008">pl</a>, <a href="#ru0008">ru</a>, <a href="#tl0008">tl</a>, <a href="#tr0008">tr</a>, <a href="#uk0008">uk</a>, <a href="#ur0008">ur</a>, <a href="#vi0008">vi</a>, <a href="#yue0008">yue</a>, <a href="#zh0008">zh</a></td>
+      <td><a href="#aeb0008">aeb</a>, <a href="#ar0008">ar</a>, <a href="#bn0008">bn</a>, <a href="#da0008">da</a>, <a href="#de0008">de</a>, <a href="#eo0008">eo</a>, <a href="#es0008">es</a>, <a href="#fa0008">fa</a>, <a href="#gu0008">gu</a>, <a href="#hi0008">hi</a>, <a href="#hu0008">hu</a>, <a href="#it0008">it</a>, <a href="#ja0008">ja</a>, <a href="#jam0008">jam</a>, <a href="#ko0008">ko</a>, <a href="#nb0008">nb</a>, <a href="#nl0008">nl</a>, <a href="#nn0008">nn</a>, <a href="#pa0008">pa</a>, <a href="#pl0008">pl</a>, <a href="#ru0008">ru</a>, <a href="#tl0008">tl</a>, <a href="#tr0008">tr</a>, <a href="#uk0008">uk</a>, <a href="#ur0008">ur</a>, <a href="#vi0008">vi</a>, <a href="#yue0008">yue</a>, <a href="#zh0008">zh</a></td>
     </tr>
     <tr>
       <td>0009</td>
@@ -6859,7 +6889,7 @@
       <td>0112</td>
       <td><a href="http://africanstorybook.org/stories/my-body">My body</a></td>
       <td><a href="https://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
-      <td><a href="#aeb0112">aeb</a>, <a href="#ar0112">ar</a>, <a href="#bn0112">bn</a>, <a href="#de0112">de</a>, <a href="#eo0112">eo</a>, <a href="#es0112">es</a>, <a href="#fa0112">fa</a>, <a href="#gu0112">gu</a>, <a href="#hu0112">hu</a>, <a href="#it0112">it</a>, <a href="#ja0112">ja</a>, <a href="#ko0112">ko</a>, <a href="#nb0112">nb</a>, <a href="#nn0112">nn</a>, <a href="#pa0112">pa</a>, <a href="#pl0112">pl</a>, <a href="#tl0112">tl</a>, <a href="#tr0112">tr</a>, <a href="#ur0112">ur</a>, <a href="#yue0112">yue</a>, <a href="#zh0112">zh</a></td>
+      <td><a href="#aeb0112">aeb</a>, <a href="#ar0112">ar</a>, <a href="#bn0112">bn</a>, <a href="#de0112">de</a>, <a href="#eo0112">eo</a>, <a href="#es0112">es</a>, <a href="#fa0112">fa</a>, <a href="#gu0112">gu</a>, <a href="#hu0112">hu</a>, <a href="#it0112">it</a>, <a href="#ja0112">ja</a>, <a href="#ko0112">ko</a>, <a href="#nb0112">nb</a>, <a href="#nl0112">nl</a>, <a href="#nn0112">nn</a>, <a href="#pa0112">pa</a>, <a href="#pl0112">pl</a>, <a href="#tl0112">tl</a>, <a href="#tr0112">tr</a>, <a href="#ur0112">ur</a>, <a href="#yue0112">yue</a>, <a href="#zh0112">zh</a></td>
     </tr>
     <tr>
       <td>0120</td>
@@ -7105,7 +7135,7 @@
       <td>0271</td>
       <td><a href="http://africanstorybook.org/stories/two">Two</a></td>
       <td><a href="https://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
-      <td><a href="#ar0271">ar</a>, <a href="#bn0271">bn</a>, <a href="#de0271">de</a>, <a href="#es0271">es</a>, <a href="#fa0271">fa</a>, <a href="#gu0271">gu</a>, <a href="#hu0271">hu</a>, <a href="#it0271">it</a>, <a href="#ja0271">ja</a>, <a href="#ko0271">ko</a>, <a href="#nb0271">nb</a>, <a href="#nn0271">nn</a>, <a href="#pa0271">pa</a>, <a href="#pl0271">pl</a>, <a href="#sv0271">sv</a>, <a href="#tl0271">tl</a>, <a href="#tr0271">tr</a>, <a href="#ur0271">ur</a>, <a href="#vi0271">vi</a>, <a href="#yue0271">yue</a>, <a href="#zh0271">zh</a></td>
+      <td><a href="#ar0271">ar</a>, <a href="#bn0271">bn</a>, <a href="#de0271">de</a>, <a href="#es0271">es</a>, <a href="#fa0271">fa</a>, <a href="#gu0271">gu</a>, <a href="#hu0271">hu</a>, <a href="#it0271">it</a>, <a href="#ja0271">ja</a>, <a href="#ko0271">ko</a>, <a href="#nb0271">nb</a>, <a href="#nl0271">nl</a>, <a href="#nn0271">nn</a>, <a href="#pa0271">pa</a>, <a href="#pl0271">pl</a>, <a href="#sv0271">sv</a>, <a href="#tl0271">tl</a>, <a href="#tr0271">tr</a>, <a href="#ur0271">ur</a>, <a href="#vi0271">vi</a>, <a href="#yue0271">yue</a>, <a href="#zh0271">zh</a></td>
     </tr>
     <tr>
       <td>0277</td>
@@ -7147,7 +7177,7 @@
       <td>0302</td>
       <td><a href="http://africanstorybook.org/stories/fire">Fire</a></td>
       <td><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
-      <td><a href="#ar0302">ar</a>, <a href="#bn0302">bn</a>, <a href="#de0302">de</a>, <a href="#eo0302">eo</a>, <a href="#es0302">es</a>, <a href="#fa0302">fa</a>, <a href="#gu0302">gu</a>, <a href="#hu0302">hu</a>, <a href="#it0302">it</a>, <a href="#ja0302">ja</a>, <a href="#ko0302">ko</a>, <a href="#nb0302">nb</a>, <a href="#nn0302">nn</a>, <a href="#pa0302">pa</a>, <a href="#pl0302">pl</a>, <a href="#tl0302">tl</a>, <a href="#tr0302">tr</a>, <a href="#ur0302">ur</a>, <a href="#yue0302">yue</a>, <a href="#zh0302">zh</a></td>
+      <td><a href="#ar0302">ar</a>, <a href="#bn0302">bn</a>, <a href="#de0302">de</a>, <a href="#eo0302">eo</a>, <a href="#es0302">es</a>, <a href="#fa0302">fa</a>, <a href="#gu0302">gu</a>, <a href="#hu0302">hu</a>, <a href="#it0302">it</a>, <a href="#ja0302">ja</a>, <a href="#ko0302">ko</a>, <a href="#nb0302">nb</a>, <a href="#nl0302">nl</a>, <a href="#nn0302">nn</a>, <a href="#pa0302">pa</a>, <a href="#pl0302">pl</a>, <a href="#tl0302">tl</a>, <a href="#tr0302">tr</a>, <a href="#ur0302">ur</a>, <a href="#yue0302">yue</a>, <a href="#zh0302">zh</a></td>
     </tr>
     <tr>
       <td>0306</td>
