--- a/stories/nb/0004_geit-hund-og-ku_slides.html
+++ b/stories/nb/0004_geit-hund-og-ku_slides.html
@@ -97,7 +97,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0004/02.jpg" /></p>
-<p>Geit, Hund og Ku var gode venner. En dag dro de på reise med en buss.</p>
+<p>Geit, Hund og Ku var gode venner. En dag dro de på tur med en buss.</p>
 <center>
 <strong>1</strong>
 </center>
@@ -106,7 +106,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0004/03.jpg" /></p>
-<p>Da de kom fram, ba sjåføren dem om å betale billetten sin. Ku betalte sin billett.</p>
+<p>Da de kom fram, ba sjåføren dem om å betale for billetten sin. Ku betalte for sin billett.</p>
 <center>
 <strong>2</strong>
 </center>
@@ -151,7 +151,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0004/08.jpg" /></p>
-<p>Geit stikker når hun hører lyden av en bil. Hun er redd for at hun vil bli arrestert for ikke å ha betalt billetten.</p>
+<p>Geit stikker når hun hører lyden av en bil. Hun er redd for at hun vil bli arrestert for ikke å ha betalt for billetten.</p>
 <center>
 <strong>7</strong>
 </center>
@@ -160,7 +160,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0004/09.jpg" /></p>
-<p>Og Ku bryr seg ikke når det kommer en bil. Ku bruker god tid når hun krysser veien fordi hun vet at hun betalte hele billetten sin.</p>
+<p>Og Ku bryr seg ikke når det kommer en bil. Ku bruker god tid når hun krysser veien fordi hun vet at hun betalte for hele billetten sin.</p>
 <center>
 <strong>8</strong>
 </center>
