--- a/stories/nb/0201_eselbarnet.html
+++ b/stories/nb/0201_eselbarnet.html
@@ -126,7 +126,7 @@ Lindiwe Matshikiza<br>norsk</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0201/13.jpg" /></p>
 
-<p>Når han hadde sluttet å løpe, var det blitt kveld, og Esel hadde gått seg vill. “I-a”, hvisket han inn i mørket. “I-a?” lød ekkoet. Han var alene. Han krøket seg sammen til en liten ball og falt i en dyp og forstyrret søvn.</p>
+<p>Når han hadde sluttet å løpe, var det blitt kveld, og Esel hadde gått seg vill. “Hi ha”, hvisket han inn i mørket. “Hi ha?” lød ekkoet. Han var alene. Han krøket seg sammen til en liten ball og falt i en dyp og forstyrret søvn.</p>
 
 <div class="pagenum">12</div>
 <p></div><div class="pagebreak"></p>
