--- a/stories/nb/0201_eselbarnet_slides.html
+++ b/stories/nb/0201_eselbarnet_slides.html
@@ -196,7 +196,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0201/13.jpg" /></p>
-<p>Når han hadde sluttet å løpe, var det blitt kveld, og Esel hadde gått seg vill. &quot;I-a&quot;, hvisket han inn i mørket. &quot;I-a?&quot; lød ekkoet. Han var alene. Han krøket seg sammen til en liten ball og falt i en dyp og forstyrret søvn.</p>
+<p>Når han hadde sluttet å løpe, var det blitt kveld, og Esel hadde gått seg vill. &quot;Hi ha&quot;, hvisket han inn i mørket. &quot;Hi ha?&quot; lød ekkoet. Han var alene. Han krøket seg sammen til en liten ball og falt i en dyp og forstyrret søvn.</p>
 <center>
 <strong>12</strong>
 </center>
