--- a/stories/nn/0004_geit-hund-og-ku_slides.html
+++ b/stories/nn/0004_geit-hund-og-ku_slides.html
@@ -97,7 +97,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0004/02.jpg" /></p>
-<p>Geit, Hund og Ku var gode vener. Ein dag drog dei på ferd med ein buss.</p>
+<p>Geit, Hund og Ku var gode vener. Ein dag drog dei på tur med ein buss.</p>
 <center>
 <strong>1</strong>
 </center>
@@ -106,7 +106,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0004/03.jpg" /></p>
-<p>Då dei kom fram, bad sjåføren dei om å betala billetten sin. Ku betalte billetten sin.</p>
+<p>Då dei kom fram, bad sjåføren dei om å betala for billetten sin. Ku betalte for billetten sin.</p>
 <center>
 <strong>2</strong>
 </center>
@@ -151,7 +151,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0004/08.jpg" /></p>
-<p>Geit stikk når ho høyrer lyden av ein bil. Ho er redd for at ho vil bli arrestert for ikkje å ha betalt billetten.</p>
+<p>Geit stikk når ho høyrer lyden av ein bil. Ho er redd for at ho vil bli arrestert for ikkje å ha betalt for billetten.</p>
 <center>
 <strong>7</strong>
 </center>
@@ -160,7 +160,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0004/09.jpg" /></p>
-<p>Og Ku bryr seg ikkje når det kjem ein bil. Ku brukar god tid når ho kryssar vegen fordi ho veit at ho betalte heile billetten sin.</p>
+<p>Og Ku bryr seg ikkje når det kjem ein bil. Ku brukar god tid når ho kryssar vegen fordi ho veit at ho betalte for heile billetten sin.</p>
 <center>
 <strong>8</strong>
 </center>
