--- a/stories/nn/0027_avgjerd.html
+++ b/stories/nn/0027_avgjerd.html
@@ -112,7 +112,7 @@ Ursula Nafula<br>nynorsk</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0027/11.jpg" /></p>
 
-<p>Faren min gjekk frå hus til hus for å be folk delta på eit folkemøte.</p>
+<p>Far min gjekk frå hus til hus for å be folk delta på eit folkemøte.</p>
 
 <div class="pagenum">10</div>
 <p></div><div class="pagebreak"></p>
@@ -126,7 +126,7 @@ Ursula Nafula<br>nynorsk</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0027/13.jpg" /></p>
 
-<p>Faren min reiste seg og sa: “Vi må samarbeida for å løysa problema våre.”</p>
+<p>Far min reiste seg og sa: “Vi må samarbeida for å løysa problema våre.”</p>
 
 <div class="pagenum">12</div>
 <p></div><div class="pagebreak"></p>
