--- a/stories/nn/0027_avgjerd_slides.html
+++ b/stories/nn/0027_avgjerd_slides.html
@@ -178,7 +178,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0027/11.jpg" /></p>
-<p>Faren min gjekk frå hus til hus for å be folk delta på eit folkemøte.</p>
+<p>Far min gjekk frå hus til hus for å be folk delta på eit folkemøte.</p>
 <center>
 <strong>10</strong>
 </center>
@@ -196,7 +196,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0027/13.jpg" /></p>
-<p>Faren min reiste seg og sa: &quot;Vi må samarbeida for å løysa problema våre.&quot;</p>
+<p>Far min reiste seg og sa: &quot;Vi må samarbeida for å løysa problema våre.&quot;</p>
 <center>
 <strong>12</strong>
 </center>
