--- a/stories/nn/0052_simbegwire_slides.html
+++ b/stories/nn/0052_simbegwire_slides.html
@@ -97,7 +97,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0052/02.jpg" /></p>
-<p>Då Simbegwire si mor døydde, vart ho veldig lei seg. Simbegwire sin far gjorde sitt beste for å ta hand om dotter si. Litt etter litt vart dei lukkelege igjen, utan Simbegwire si mor. Kvar morgon sat dei og snakka om dagen som låg føre dei. Kvar kveld laga dei middag saman. Etter at dei hadde teke oppvasken, hjelpte Simbegwire sin far ho med leksene.</p>
+<p>Då Simbegwire si mor døydde, vart ho veldig lei seg. Simbegwire sin far gjorde sitt beste for å ta hand om dotter si. Litt etter litt vart dei lukkelege igjen, utan Simbegwire si mor. Kvar morgon sat dei og snakka om dagen som låg føre dei. Kvar kveld laga dei middag saman. Etter at dei hadde teke oppvasken, hjelpte Simbegwire sin far henne med leksene.</p>
 <center>
 <strong>1</strong>
 </center>
@@ -106,7 +106,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0052/03.jpg" /></p>
-<p>Ein dag kom Simbegwire sin far heim seinare enn vanleg. &quot;Kor er du, jenta mi?&quot; ropte han. Simbegwire sprang til faren sin. Ho stoppa opp då ho såg at han heldt ei dame i handa. &quot;Eg vil at du skal møta ei spesiell kvinne, jenta mi. Dette er Anita&quot;, sa han og smilte.</p>
+<p>Ein dag kom Simbegwire sin far heim seinare enn vanleg. &quot;Kor er du, jenta mi?&quot; ropte han. Simbegwire sprang til far sin. Ho stoppa opp då ho såg at han heldt ei dame i handa. &quot;Eg vil at du skal møta ei spesiell kvinne, jenta mi. Dette er Anita&quot;, sa han og smilte.</p>
 <center>
 <strong>2</strong>
 </center>
@@ -115,7 +115,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0052/04.jpg" /></p>
-<p>&quot;Hei Simbegwire, faren din har fortalt meg mykje om deg&quot;, sa Anita. Men ho smilte ikkje og tok ikkje handa til jenta. Simbegwire sin far var glad og begeistra. Han snakka om at dei tre skulle bu saman, og kor godt dei skulle få det. &quot;Jenta mi, eg håpar du vil akseptera Anita som mora di&quot;, sa han.</p>
+<p>&quot;Hei Simbegwire, far din har fortalt meg mykje om deg&quot;, sa Anita. Men ho smilte ikkje og tok ikkje handa til jenta. Simbegwire sin far var glad og begeistra. Han snakka om at dei tre skulle bu saman, og kor godt dei skulle få det. &quot;Jenta mi, eg håpar du vil akseptera Anita som mor di&quot;, sa han.</p>
 <center>
 <strong>3</strong>
 </center>
@@ -124,7 +124,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0052/05.jpg" /></p>
-<p>Livet til Simbegwire forandra seg. Ho hadde ikkje lenger tid til å sitja saman med faren sin om morgonen. Anita gav ho så mykje husarbeid at ho vart for sliten til å gjera leksene om kvelden. Ho gjekk rett til sengs etter middag. Den einaste trøysta ho hadde var eit fargerikt teppe mora hennar hadde gjeve ho. Det verka ikkje som Simbegwire sin far merka at dotter hans var ulykkelig.</p>
+<p>Livet til Simbegwire forandra seg. Ho hadde ikkje lenger tid til å sitja saman med far sin om morgonen. Anita gav henne så mykje husarbeid at ho vart for sliten til å gjera leksene om kvelden. Ho gjekk rett til sengs etter middag. Den einaste trøysta ho hadde var eit fargerikt teppe mor hennar hadde gjeve henne. Det verka ikkje som Simbegwire sin far merka at dotter hans var ulykkelig.</p>
 <center>
 <strong>4</strong>
 </center>
@@ -142,7 +142,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0052/07.jpg" /></p>
-<p>Ting vart berre vondare for Simbegwire. Viss ho ikkje gjorde ferdig husarbeidet, eller klaga, slo Anita ho. Og under middagen åt Anita det meste av maten, slik at Simbegwire berre fekk nokre få restar. Kvar natt gret Simbegwire til ho fall i søvn medan ho klemde rundt teppet frå mora si.</p>
+<p>Ting vart berre vondare for Simbegwire. Viss ho ikkje gjorde ferdig husarbeidet, eller klaga, slo Anita henne. Og under middagen åt Anita det meste av maten, slik at Simbegwire berre fekk nokre få restar. Kvar natt gret Simbegwire til ho fall i søvn medan ho klemde rundt teppet frå mor si.</p>
 <center>
 <strong>6</strong>
 </center>
@@ -160,7 +160,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0052/09.jpg" /></p>
-<p>Simbegwire var veldig opprørt. Ho bestemte seg for å rømma. Ho tok bitane frå teppet til mora, pakka litt mat og drog av garde. Ho følgde den same vegen som faren hennar hadde teke.</p>
+<p>Simbegwire var veldig opprørt. Ho bestemte seg for å rømma. Ho tok bitane frå teppet til mora, pakka litt mat og drog av garde. Ho følgde den same vegen som far hennar hadde teke.</p>
 <center>
 <strong>8</strong>
 </center>
@@ -187,7 +187,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0052/12.jpg" /></p>
-<p>Denne kvinna såg opp i treet. Då ho såg jenta og bitane av det fargerike teppet, ropte ho: &quot;Simbegwire, dottera til broren min!&quot; Dei andre kvinnene stoppa å vaska og hjelpte Simbegwire med å klatra ned frå treet. Tanta hennar gav den vesle jenta ein klem og prøvde å trøysta ho.</p>
+<p>Denne kvinna såg opp i treet. Då ho såg jenta og bitane av det fargerike teppet, ropte ho: &quot;Simbegwire, dottera til bror min!&quot; Dei andre kvinnene stoppa å vaska og hjelpte Simbegwire med å klatra ned frå treet. Tanta hennar gav den vesle jenta ein klem og prøvde å trøysta henne.</p>
 <center>
 <strong>11</strong>
 </center>
@@ -196,7 +196,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0052/13.jpg" /></p>
-<p>Simbegwire si tante tok med seg barnet til sitt eige hus. Ho gav Simbegwire varm mat, og la ho til å sova med teppet til mora hennar. Den natta gret Simbegwire i det ho sovna. Men det var fordi ho var så letta. Ho visste at tanta hennar ville ta seg av ho.</p>
+<p>Tanta til Simbegwire tok med seg barnet til sitt eige hus. Ho gav Simbegwire varm mat, og la henne til å sova med teppet til mor si. Den natta gret Simbegwire i det ho sovna. Men det var fordi ho var så letta. Ho visste at tanta hennar ville ta seg av henne.</p>
 <center>
 <strong>12</strong>
 </center>
@@ -205,7 +205,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0052/14.jpg" /></p>
-<p>Då Simbegwire sin far kom heim, såg han at rommet hennar var tomt. &quot;Kva har skjett, Anita?&quot; spurde han bekymra. Kvinna svara at Simbegwire hadde stukke av. &quot;Eg ville at ho skulle respektera meg&quot;, sa ho. &quot;Men kanskje eg var for streng.&quot; Simbegwire sin far forlét huset og gjekk i retning av bekken. Han heldt fram til landsbyen til systera si for å finna ut om ho hadde sett Simbegwire.</p>
+<p>Då Simbegwire sin far kom heim, såg han at rommet hennar var tomt. &quot;Kva har skjett, Anita?&quot; spurde han bekymra. Kvinna svara at Simbegwire hadde stukke av. &quot;Eg ville at ho skulle respektera meg&quot;, sa ho. &quot;Men kanskje eg var for streng.&quot; Simbegwire sin far forlét huset og gjekk i retning av bekken. Han heldt fram til landsbyen til syster si for å finna ut om ho hadde sett Simbegwire.</p>
 <center>
 <strong>13</strong>
 </center>
@@ -214,7 +214,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0052/15.jpg" /></p>
-<p>Simbegwire leikte med fetrane og kusinene sine då ho såg faren sin på lang avstand. Ho var redd han skulle verta sint, så ho sprang inn i huset og gøymde seg. Men faren hennar gjekk til ho og sa: &quot;Simbegwire, du har funne den beste mora i verda. Ei som er glad i deg og forstår deg. Eg er stolt av deg og glad i deg.&quot; Dei vart samde om at Simbegwire skulle verta buande hos tanta si så lenge ho ville.</p>
+<p>Simbegwire leikte med fetrane og kusinene sine då ho såg far sin på lang avstand. Ho var redd han skulle verta sint, så ho sprang inn i huset og gøymde seg. Men far hennar gjekk til henne og sa: &quot;Simbegwire, du har funne den beste mora i verda. Ei som er glad i deg og forstår deg. Eg er stolt av deg og glad i deg.&quot; Dei vart samde om at Simbegwire skulle verta buande hos tanta si så lenge ho ville.</p>
 <center>
 <strong>14</strong>
 </center>
@@ -223,7 +223,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0052/16.jpg" /></p>
-<p>Faren hennar vitja ho kvar dag. Etter kvart kom han med Anita. Ho rakk handa til Simbegwire. &quot;Eg er veldig lei meg, vesla, eg tok feil&quot;, gret ho. &quot;Vil du la meg prøva igjen?&quot; Simbegwire såg på faren sin og den bekymra mina hans. Då gjekk ho bort til Anita og la langsamt armane rundt ho.</p>
+<p>Far hennar vitja henne kvar dag. Etter kvart kom han med Anita. Ho rakk handa til Simbegwire. &quot;Eg er veldig lei meg, vesla, eg tok feil&quot;, gret ho. &quot;Vil du la meg prøva igjen?&quot; Simbegwire såg på far sin og den bekymra mina hans. Då gjekk ho bort til Anita og la langsamt armane rundt henne.</p>
 <center>
 <strong>15</strong>
 </center>
@@ -232,7 +232,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0052/17.jpg" /></p>
-<p>Neste veke bad Anita Simbegwire, saman med fetrane, kusinene og tanta, heim til seg på eit måltid. For ein fest! Anita laga alle yndlingsrettane til Simbegwire, og alle åt til dei vart gode og mette. Deretter leikte borna medan dei vaksne snakka. Simbegwire følte seg glad og modig. Ho bestemte at snart, veldig snart, skulle ho flytta heim og bu med faren sin og stemora si.</p>
+<p>Neste veke bad Anita Simbegwire, saman med fetrane, kusinene og tanta, heim til seg på eit måltid. For ein fest! Anita laga alle yndlingsrettane til Simbegwire, og alle åt til dei vart gode og mette. Deretter leikte borna medan dei vaksne snakka. Simbegwire følte seg glad og modig. Ho bestemte at snart, veldig snart, skulle ho flytta heim og bu med far sin og stemor si.</p>
 <center>
 <strong>16</strong>
 </center>
