--- a/stories/nn/0067_å-laga-mat_slides.html
+++ b/stories/nn/0067_å-laga-mat_slides.html
@@ -151,7 +151,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0067/08.jpg" /></p>
-<p>Mora mi hakkar løken.</p>
+<p>Mor mi hakkar løken.</p>
 <center>
 <strong>7</strong>
 </center>
