--- a/stories/nn/0110_eit-lite-frø-historia-om-wangari-maathai_slides.html
+++ b/stories/nn/0110_eit-lite-frø-historia-om-wangari-maathai_slides.html
@@ -97,7 +97,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0110/02.jpg" /></p>
-<p>I ein landsby ved foten av Mount Kenya i Aust-Afrika arbeidde ei lita jente saman med mora si på åkeren. Wangari heitte ho.</p>
+<p>I ein landsby ved foten av Mount Kenya i Aust-Afrika arbeidde ei lita jente saman med mor si på åkeren. Wangari heitte ho.</p>
 <center>
 <strong>1</strong>
 </center>
@@ -124,7 +124,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0110/05.jpg" /></p>
-<p>Wangari var ei flink jente og ville gjerne byrja på skulen. Men mora og faren ville at ho skulle vera heime og hjelpa til. Då ho vart sju år, overtalte storebroren mor og far til å la ho få gå på skulen.</p>
+<p>Wangari var ei flink jente og ville gjerne byrja på skulen. Men mora og faren ville at ho skulle vera heime og hjelpa til. Då ho vart sju år, overtalte storebroren mor og far til å la henne få gå på skulen.</p>
 <center>
 <strong>4</strong>
 </center>
@@ -187,7 +187,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0110/12.jpg" /></p>
-<p>Wangari hadde arbeidd hardt. Folk over heile verda la merke til det og dei gav ho ein berømt pris. Han vert kalla Nobels fredspris. Ho vart den første afrikanske kvinna som fekk han.</p>
+<p>Wangari hadde arbeidd hardt. Folk over heile verda la merke til det og dei gav henne ein berømt pris. Han vert kalla Nobels fredspris. Ho vart den første afrikanske kvinna som fekk han.</p>
 <center>
 <strong>11</strong>
 </center>
@@ -196,7 +196,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0110/13.jpg" /></p>
-<p>Wangari døydde i 2011, men vi kan tenkja på ho kvar gong vi ser eit vent tre.</p>
+<p>Wangari døydde i 2011, men vi kan tenkja på henne kvar gong vi ser eit vent tre.</p>
 <center>
 <strong>12</strong>
 </center>
