--- a/stories/nn/0201_eselbarnet_slides.html
+++ b/stories/nn/0201_eselbarnet_slides.html
@@ -115,7 +115,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0201/04.jpg" /></p>
-<p>Sjenert, men modig gjekk den vesle jenta nærare kvinna. &quot;Vi må halda på ho her hos oss&quot;, bestemte dei som var med den vesle jenta. &quot;Vi skal verna ho og barnet hennar.&quot;</p>
+<p>Sjenert, men modig gjekk den vesle jenta nærare kvinna. &quot;Vi må halda på henne her hos oss&quot;, bestemte dei som var med den vesle jenta. &quot;Vi skal verna henne og barnet hennar.&quot;</p>
 <center>
 <strong>3</strong>
 </center>
@@ -160,7 +160,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0201/09.jpg" /></p>
-<p>Men til slutt godtok ho at han var barnet hennar og at ho var mora hans.</p>
+<p>Men til slutt godtok ho at han var barnet hennar og at ho var mor hans.</p>
 <center>
 <strong>8</strong>
 </center>
@@ -169,7 +169,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0201/10.jpg" /></p>
-<p>Viss berre barnet hadde halde på den vesle storleiken, hadde alt kanskje vore annleis. Men eselbarnet voks og voks heilt til han ikkje lenger fekk plass på ryggen til mora. Og uansett kor hardt han freista, klarte han ikkje å oppføra seg som eit menneske. Mora hans var ofte sliten og frustrert. Nokre gongar sette ho han til å gjera arbeid som var meint for dyr.</p>
+<p>Viss berre barnet hadde halde på den vesle storleiken, hadde alt kanskje vore annleis. Men eselbarnet voks og voks heilt til han ikkje lenger fekk plass på ryggen til mora. Og uansett kor hardt han freista, klarte han ikkje å oppføra seg som eit menneske. Mor hans var ofte sliten og frustrert. Nokre gongar sette ho han til å gjera arbeid som var meint for dyr.</p>
 <center>
 <strong>9</strong>
 </center>
@@ -178,7 +178,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0201/11.jpg" /></p>
-<p>Esel vart fylt av forvirring og sinne. Han kunne ikkje gjera ditt og han kunne ikkje gjera datt. Han kunne ikkje vera på éin måte og han kunne ikkje vera på ein annan måte. Han vart så sint at han ein dag sparka ned huset til mora si.</p>
+<p>Esel vart fylt av forvirring og sinne. Han kunne ikkje gjera ditt og han kunne ikkje gjera datt. Han kunne ikkje vera på éin måte og han kunne ikkje vera på ein annan måte. Han vart så sint at han ein dag sparka ned huset til mor si.</p>
 <center>
 <strong>10</strong>
 </center>
@@ -196,7 +196,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0201/13.jpg" /></p>
-<p>Når han hadde slutta å springe, var det vorte kveld, og Esel hadde gått seg vill. &quot;I-a&quot;, kviskra han inn i mørket. &quot;I-a?&quot; lydde ekkoet. Han var åleine. Han krøkte seg saman til ein liten ball og fall i ein djup og forstyrra søvn.</p>
+<p>Når han hadde slutta å springe, var det vorte kveld, og Esel hadde gått seg vill. &quot;Hi ha&quot;, kviskra han inn i mørket. &quot;Hi ha?&quot; lydde ekkoet. Han var åleine. Han krøkte seg saman til ein liten ball og fall i ein djup og forstyrra søvn.</p>
 <center>
 <strong>12</strong>
 </center>
@@ -232,7 +232,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0201/17.jpg" /></p>
-<p>Høgt oppe blant skyene sovna dei. Esel drøymde at mora hans var sjuk og ropte på han. Og då han vakna …</p>
+<p>Høgt oppe blant skyene sovna dei. Esel drøymde at mor hans var sjuk og ropte på han. Og då han vakna …</p>
 <center>
 <strong>16</strong>
 </center>
@@ -259,7 +259,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0201/20.jpg" /></p>
-<p>Esel fann mora si som var åleine, og sørgde over tapet av barnet sitt. Dei stira på kvarandre lengje. Og så klemde dei kvarandre veldig hardt.</p>
+<p>Esel fann mor si som var åleine, og sørgde over tapet av barnet sitt. Dei stira på kvarandre lengje. Og så klemde dei kvarandre veldig hardt.</p>
 <center>
 <strong>19</strong>
 </center>
@@ -268,7 +268,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0201/21.jpg" /></p>
-<p>Eselbarnet og mora hans har utvikla seg i fellesskap og funne mange måtar å leva side ved side. Sakte men sikkert har andre familiar begynt å slå seg ned rundt dei.</p>
+<p>Eselbarnet og mor hans har utvikla seg i fellesskap og funne mange måtar å leva side ved side. Sakte men sikkert har andre familiar begynt å slå seg ned rundt dei.</p>
 <center>
 <strong>20</strong>
 </center>
