--- a/stories/nn/0210_tingi-og-kyrne_slides.html
+++ b/stories/nn/0210_tingi-og-kyrne_slides.html
@@ -97,7 +97,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0210/02.jpg" /></p>
-<p>Tingi budde saman med bestemora si.</p>
+<p>Tingi budde saman med bestemor si.</p>
 <center>
 <strong>1</strong>
 </center>
@@ -106,7 +106,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0210/03.jpg" /></p>
-<p>Han brukte å passa på kyrne med ho.</p>
+<p>Han brukte å passa på kyrne med henne.</p>
 <center>
 <strong>2</strong>
 </center>
@@ -133,7 +133,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0210/06.jpg" /></p>
-<p>Tingi og bestemora hans sprang og gøymde seg.</p>
+<p>Tingi og bestemor hans sprang og gøymde seg.</p>
 <center>
 <strong>5</strong>
 </center>
@@ -178,7 +178,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0210/11.jpg" /></p>
-<p>Då det var trygt, kom Tingi og bestemora hans ut.</p>
+<p>Då det var trygt, kom Tingi og bestemor hans ut.</p>
 <center>
 <strong>10</strong>
 </center>
