--- a/stories/nn/0243_på-ferie-hos-bestemor_slides.html
+++ b/stories/nn/0243_på-ferie-hos-bestemor_slides.html
@@ -97,7 +97,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0243/02.jpg" /></p>
-<p>Odongo og Apiyo budde i byen med faren sin. Dei såg fram til ferien. Ikkje berre fordi skulen var slutt, men fordi dei skulle vitja bestemora si. Ho budde i ein fiskerlandsby nær ein stor innsjø.</p>
+<p>Odongo og Apiyo budde i byen med far sin. Dei såg fram til ferien. Ikkje berre fordi skulen var slutt, men fordi dei skulle vitja bestemor si. Ho budde i ein fiskerlandsby nær ein stor innsjø.</p>
 <center>
 <strong>1</strong>
 </center>
@@ -115,7 +115,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0243/04.jpg" /></p>
-<p>Tidleg neste morgon drog dei til landsbyen i bilen til faren sin. Dei køyrde forbi fjell, ville dyr og teplantasjar. Dei talde bilar og song songar.</p>
+<p>Tidleg neste morgon drog dei til landsbyen i bilen til far sin. Dei køyrde forbi fjell, ville dyr og teplantasjar. Dei talde bilar og song songar.</p>
 <center>
 <strong>3</strong>
 </center>
@@ -133,7 +133,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0243/06.jpg" /></p>
-<p>Faren vekte Odongo og Apiyo i det dei kom landsbyen. Dei fann Nyar-Kanyada, bestemora si, som kvilte på ei matte under eit tre. På luo tyder Nyar-Kanyada &quot;dottera til Kanyada-folket.&quot; Ho var ein sterk og ven kvinne.</p>
+<p>Faren vekte Odongo og Apiyo i det dei kom landsbyen. Dei fann Nyar-Kanyada, bestemor si, som kvilte på ei matte under eit tre. På luo tyder Nyar-Kanyada &quot;dottera til Kanyada-folket.&quot; Ho var ein sterk og ven kvinne.</p>
 <center>
 <strong>5</strong>
 </center>
@@ -187,7 +187,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0243/12.jpg" /></p>
-<p>Dagen etter køyrde faren deira tilbake til byen og lét dei verta igjen hos Nyar-Kanyada.</p>
+<p>Dagen etter køyrde far deira tilbake til byen og lét dei verta igjen hos Nyar-Kanyada.</p>
 <center>
 <strong>11</strong>
 </center>
@@ -196,7 +196,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0243/13.jpg" /></p>
-<p>Odongo og Apiyo hjelpte bestemora si med gjeremåla i huset. Dei henta vatn og ved. Dei samla egg frå hønene og plukka grønsaker frå kjøkkenhagen.</p>
+<p>Odongo og Apiyo hjelpte bestemor si med gjeremåla i huset. Dei henta vatn og ved. Dei samla egg frå hønene og plukka grønsaker frå kjøkkenhagen.</p>
 <center>
 <strong>12</strong>
 </center>
@@ -214,7 +214,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0243/15.jpg" /></p>
-<p>Ein morgon tok Odongo kyrne til bestemora si ut for å beita. Dei sprang inn på garden til ein nabo. Bonden vart sint på Odongo. Han truga med å halda på kyrne sidan dei åt avlinga hans. Etter den dagen sørgde guten for at kyrne ikkje skapte trøbbel igjen.</p>
+<p>Ein morgon tok Odongo kyrne til bestemor si ut for å beita. Dei sprang inn på garden til ein nabo. Bonden vart sint på Odongo. Han truga med å halda på kyrne sidan dei åt avlinga hans. Etter den dagen sørgde guten for at kyrne ikkje skapte trøbbel igjen.</p>
 <center>
 <strong>14</strong>
 </center>
@@ -250,7 +250,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0243/19.jpg" /></p>
-<p>Då faren deira kom for å henta dei, ville dei ikkje dra. Borna trygla Nyar-Kanyada om å verta med dei til byen. Ho smilte og sa: &quot;Eg er for gammal for byen. Eg skal venta på at de kjem tilbake til landsbyen min.&quot;</p>
+<p>Då far deira kom for å henta dei, ville dei ikkje dra. Borna trygla Nyar-Kanyada om å verta med dei til byen. Ho smilte og sa: &quot;Eg er for gammal for byen. Eg skal venta på at de kjem tilbake til landsbyen min.&quot;</p>
 <center>
 <strong>18</strong>
 </center>
@@ -259,7 +259,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0243/20.jpg" /></p>
-<p>Odongo og Apiyo klemde ho hardt og tok farvel.</p>
+<p>Odongo og Apiyo klemde henne hardt og tok farvel.</p>
 <center>
 <strong>19</strong>
 </center>
