--- a/stories/nn/0291_det-systera-til-vusi-sa.html
+++ b/stories/nn/0291_det-systera-til-vusi-sa.html
@@ -49,7 +49,7 @@ Nina Orange<br>nynorsk</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0291/02.jpg" /></p>
 
-<p>Tidleg ein morgon ropte bestemora til Vusi på han: “Vusi, ver snill og ta med dette egget til foreldra dine. Dei vil laga ei stor kake til bryllaupet til systera di.”</p>
+<p>Tidleg ein morgon ropte bestemora til Vusi på han: “Vusi, ver snill og ta med dette egget til foreldra dine. Dei vil laga ei stor kake til bryllaupet til syster di.”</p>
 
 <div class="pagenum">1</div>
 <p></div><div class="pagebreak"></p>
@@ -63,14 +63,14 @@ Nina Orange<br>nynorsk</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0291/04.jpg" /></p>
 
-<p>“Kva har du gjort?” ropte Vusi. “Det egget var meint for ei kake. Kaka var til bryllaupet til systera mi. Kva kjem systera mi til å seia viss det ikkje vert noka bryllaupskake?”</p>
+<p>“Kva har du gjort?” ropte Vusi. “Det egget var meint for ei kake. Kaka var til bryllaupet til syster mi. Kva kjem syster mi til å seia viss det ikkje vert noka bryllaupskake?”</p>
 
 <div class="pagenum">3</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0291/05.jpg" /></p>
 
-<p>Gutane var lei seg for at dei erta Vusi. “Vi kan ikkje hjelpa deg med kaka, men her er ein kjepp til systera di”, sa han eine. Vusi heldt fram på reisa.</p>
+<p>Gutane var lei seg for at dei erta Vusi. “Vi kan ikkje hjelpa deg med kaka, men her er ein kjepp til syster di”, sa han eine. Vusi heldt fram på reisa.</p>
 
 <div class="pagenum">4</div>
 <p></div><div class="pagebreak"></p>
@@ -84,14 +84,14 @@ Nina Orange<br>nynorsk</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0291/07.jpg" /></p>
 
-<p>“Kva har du gjort?” ropte Vusi. “Den kjeppen var ei gåve til systera mi. Fruktplukkarane gav meg den kjeppen fordi dei knuste egget som var meint for kaka. Kaka var meint for bryllaupet til systera mi. No er det ikkje noko egg, ikkje noka kake, og ikkje noka gåve. Kva kjem systera mi til å seia?”</p>
+<p>“Kva har du gjort?” ropte Vusi. “Den kjeppen var ei gåve til syster mi. Fruktplukkarane gav meg den kjeppen fordi dei knuste egget som var meint for kaka. Kaka var meint for bryllaupet til syster mi. No er det ikkje noko egg, ikkje noka kake, og ikkje noka gåve. Kva kjem syster mi til å seia?”</p>
 
 <div class="pagenum">6</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0291/08.jpg" /></p>
 
-<p>Bygningsarbeidarane var leie seg for at dei knakk kjeppen. “Vi kan ikkje hjelpa deg med kaka, men her er litt halmtekke for huset til systera di”, sa den eine. Og slik heldt Vusi fram på reisa.</p>
+<p>Bygningsarbeidarane var leie seg for at dei knakk kjeppen. “Vi kan ikkje hjelpa deg med kaka, men her er litt halmtekke for huset til syster di”, sa den eine. Og slik heldt Vusi fram på reisa.</p>
 
 <div class="pagenum">7</div>
 <p></div><div class="pagebreak"></p>
@@ -105,21 +105,21 @@ Nina Orange<br>nynorsk</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0291/10.jpg" /></p>
 
-<p>“Kva har du gjort?” ropte Vusi. “Den halmen var ei gåve til systera mi. Bygningsarbeidarane gav meg den halmen fordi dei knakk kjeppen frå fruktplukkarane. Fruktplukkarane gav meg kjeppen fordi dei knuste egget meint for kaka til systera mi. Kaka var meint for bryllaupet til systera mi. No er det ikkje noko egg, ikkje noka kake, og ikkje noka gåve. Kva kjem systera mi til å seia?”</p>
+<p>“Kva har du gjort?” ropte Vusi. “Den halmen var ei gåve til syster mi. Bygningsarbeidarane gav meg den halmen fordi dei knakk kjeppen frå fruktplukkarane. Fruktplukkarane gav meg kjeppen fordi dei knuste egget meint for kaka til syster mi. Kaka var meint for bryllaupet til syster mi. No er det ikkje noko egg, ikkje noka kake, og ikkje noka gåve. Kva kjem syster mi til å seia?”</p>
 
 <div class="pagenum">9</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0291/11.jpg" /></p>
 
-<p>Kua var lei seg for at ho var grådig. Bonden vart samd i at kua skulle følgja med Vusi som ei gåve til systera hans. Og slik heldt Vusi fram.</p>
+<p>Kua var lei seg for at ho var grådig. Bonden vart samd i at kua skulle følgja med Vusi som ei gåve til syster hans. Og slik heldt Vusi fram.</p>
 
 <div class="pagenum">10</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0291/12.jpg" /></p>
 
-<p>Men kua sprang tilbake til bonden rundt middagstid. Og Vusi gjekk seg vill på reisa. Han kom fram veldig seint til bryllaupet til systera si. Gjestene var allereie i gang med å eta.</p>
+<p>Men kua sprang tilbake til bonden rundt middagstid. Og Vusi gjekk seg vill på reisa. Han kom fram veldig seint til bryllaupet til syster si. Gjestene var allereie i gang med å eta.</p>
 
 <div class="pagenum">11</div>
 <p></div><div class="pagebreak"></p>
