--- a/stories/nn/0294_bestemors-bananar_slides.html
+++ b/stories/nn/0294_bestemors-bananar_slides.html
@@ -151,7 +151,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0294/08.jpg" /></p>
-<p>Neste dag, då bestemor kom for å vitja mora mi, skunda eg meg av garde til huset hennar for å sjekka bananane ein gong til. Det var ein klase veldig modne bananar der. Eg tok éin og gøymde den i kjolen min. Etter at eg hadde dekt korga, gjekk eg bak huset og åt den fort. Det var den søtaste bananen eg nokosinne hadde smakt.</p>
+<p>Neste dag, då bestemor kom for å vitja mor mi, skunda eg meg av garde til huset hennar for å sjekka bananane ein gong til. Det var ein klase veldig modne bananar der. Eg tok éin og gøymde den i kjolen min. Etter at eg hadde dekt korga, gjekk eg bak huset og åt den fort. Det var den søtaste bananen eg nokosinne hadde smakt.</p>
 <center>
 <strong>7</strong>
 </center>
@@ -160,7 +160,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0294/09.jpg" /></p>
-<p>Neste dag medan bestemor var i kjøkkenhagen og plukka grønsaker, sneik eg meg inn og titta på bananane. Nesten alle var modne. Eg kunne ikkje la vera å ta ein klase med fire. I det eg lista meg mot døra, høyrde eg bestemor hosta utanfor. Eg rekte så vidt å gøyma bananane under kjolen og gjekk forbi ho.</p>
+<p>Neste dag medan bestemor var i kjøkkenhagen og plukka grønsaker, sneik eg meg inn og titta på bananane. Nesten alle var modne. Eg kunne ikkje la vera å ta ein klase med fire. I det eg lista meg mot døra, høyrde eg bestemor hosta utanfor. Eg rekte så vidt å gøyma bananane under kjolen og gjekk forbi henne.</p>
 <center>
 <strong>8</strong>
 </center>
@@ -169,7 +169,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0294/10.jpg" /></p>
-<p>Neste dag var det marknadsdag. Bestemor stod tidleg opp. Ho tok alltid med modne bananar og maniok for å selja på marknaden. Eg skunda meg ikkje for å vitja ho den dagen. Men eg kunne ikkje vika unna ho veldig lenge.</p>
+<p>Neste dag var det marknadsdag. Bestemor stod tidleg opp. Ho tok alltid med modne bananar og maniok for å selja på marknaden. Eg skunda meg ikkje for å vitja henne den dagen. Men eg kunne ikkje vika unna henne veldig lenge.</p>
 <center>
 <strong>9</strong>
 </center>
