--- a/stories/nn/0315_sakimas-song.html
+++ b/stories/nn/0315_sakimas-song.html
@@ -70,14 +70,14 @@ Ursula Nafula<br>nynorsk</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0315/05.jpg" /></p>
 
-<p>Sakima sine foreldre jobba i huset til den rike mannen. Dei drog tidleg om morgonen og kom tilbake seint på kvelden. Sakima vart igjen saman med veslesystera si.</p>
+<p>Sakima sine foreldre jobba i huset til den rike mannen. Dei drog tidleg om morgonen og kom tilbake seint på kvelden. Sakima vart igjen saman med veslesyster si.</p>
 
 <div class="pagenum">4</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0315/06.jpg" /></p>
 
-<p>Sakima elska å synga songar. Ein dag spurde mora hans han: “Kor har du lært desse songane, Sakima?”</p>
+<p>Sakima elska å synga songar. Ein dag spurde mor hans han: “Kor har du lært desse songane, Sakima?”</p>
 
 <div class="pagenum">5</div>
 <p></div><div class="pagebreak"></p>
@@ -91,14 +91,14 @@ Ursula Nafula<br>nynorsk</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0315/08.jpg" /></p>
 
-<p>Sakima likte å synga for veslesystera si, særleg viss ho var svolten. Systera hans brukte å høyra på at han song yndlingssongen sin. Ho rørde seg til den lindrande låten.</p>
+<p>Sakima likte å synga for veslesyster si, særleg viss ho var svolten. Syster hans brukte å høyra på at han song yndlingssongen sin. Ho rørde seg til den lindrande låten.</p>
 
 <div class="pagenum">7</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0315/09.jpg" /></p>
 
-<p>“Kan du synga han igjen og igjen, Sakima?” brukte systera hans å be han. Sakima aksepterte og song han igjen og igjen.</p>
+<p>“Kan du synga han igjen og igjen, Sakima?” brukte syster hans å be han. Sakima aksepterte og song han igjen og igjen.</p>
 
 <div class="pagenum">8</div>
 <p></div><div class="pagebreak"></p>
@@ -126,14 +126,14 @@ Ursula Nafula<br>nynorsk</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0315/13.jpg" /></p>
 
-<p>Likevel gav ikkje Sakima opp. Veslesystera hans støtta han. Ho sa: “Sakimas songar er lindrande når eg er svolten. Dei kjem til å verka lindrande på den rike mannen òg.”</p>
+<p>Likevel gav ikkje Sakima opp. Veslesyster hans støtta han. Ho sa: “Songane til Sakima er lindrande når eg er svolten. Dei kjem til å verka lindrande på den rike mannen òg.”</p>
 
 <div class="pagenum">12</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0315/14.jpg" /></p>
 
-<p>Neste dag bad Sakima veslesystera si om å leia han til huset til den rike mannen.</p>
+<p>Neste dag bad Sakima veslesyster si om å leia han til huset til den rike mannen.</p>
 
 <div class="pagenum">13</div>
 <p></div><div class="pagebreak"></p>
@@ -147,7 +147,7 @@ Ursula Nafula<br>nynorsk</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0315/16.jpg" /></p>
 
-<p>Arbeidarane stoppa det dei halde på med. Dei høyrde på Sakimas vene song. Men éin mann sa: “Ingen har vore i stand til å trøysta sjefen. Trur denne blinde guten at han kan trøysta han?”</p>
+<p>Arbeidarane stoppa det dei halde på med. Dei høyrde på den vene songen til Sakima. Men éin mann sa: “Ingen har vore i stand til å trøysta sjefen. Trur denne blinde guten at han kan trøysta han?”</p>
 
 <div class="pagenum">15</div>
 <p></div><div class="pagebreak"></p>
