--- a/stories/nn/0315_sakimas-song_slides.html
+++ b/stories/nn/0315_sakimas-song_slides.html
@@ -124,7 +124,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0315/05.jpg" /></p>
-<p>Sakima sine foreldre jobba i huset til den rike mannen. Dei drog tidleg om morgonen og kom tilbake seint på kvelden. Sakima vart igjen saman med veslesystera si.</p>
+<p>Sakima sine foreldre jobba i huset til den rike mannen. Dei drog tidleg om morgonen og kom tilbake seint på kvelden. Sakima vart igjen saman med veslesyster si.</p>
 <center>
 <strong>4</strong>
 </center>
@@ -133,7 +133,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0315/06.jpg" /></p>
-<p>Sakima elska å synga songar. Ein dag spurde mora hans han: &quot;Kor har du lært desse songane, Sakima?&quot;</p>
+<p>Sakima elska å synga songar. Ein dag spurde mor hans han: &quot;Kor har du lært desse songane, Sakima?&quot;</p>
 <center>
 <strong>5</strong>
 </center>
@@ -151,7 +151,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0315/08.jpg" /></p>
-<p>Sakima likte å synga for veslesystera si, særleg viss ho var svolten. Systera hans brukte å høyra på at han song yndlingssongen sin. Ho rørde seg til den lindrande låten.</p>
+<p>Sakima likte å synga for veslesyster si, særleg viss ho var svolten. Syster hans brukte å høyra på at han song yndlingssongen sin. Ho rørde seg til den lindrande låten.</p>
 <center>
 <strong>7</strong>
 </center>
@@ -160,7 +160,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0315/09.jpg" /></p>
-<p>&quot;Kan du synga han igjen og igjen, Sakima?&quot; brukte systera hans å be han. Sakima aksepterte og song han igjen og igjen.</p>
+<p>&quot;Kan du synga han igjen og igjen, Sakima?&quot; brukte syster hans å be han. Sakima aksepterte og song han igjen og igjen.</p>
 <center>
 <strong>8</strong>
 </center>
@@ -196,7 +196,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0315/13.jpg" /></p>
-<p>Likevel gav ikkje Sakima opp. Veslesystera hans støtta han. Ho sa: &quot;Sakimas songar er lindrande når eg er svolten. Dei kjem til å verka lindrande på den rike mannen òg.&quot;</p>
+<p>Likevel gav ikkje Sakima opp. Veslesyster hans støtta han. Ho sa: &quot;Songane til Sakima er lindrande når eg er svolten. Dei kjem til å verka lindrande på den rike mannen òg.&quot;</p>
 <center>
 <strong>12</strong>
 </center>
@@ -205,7 +205,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0315/14.jpg" /></p>
-<p>Neste dag bad Sakima veslesystera si om å leia han til huset til den rike mannen.</p>
+<p>Neste dag bad Sakima veslesyster si om å leia han til huset til den rike mannen.</p>
 <center>
 <strong>13</strong>
 </center>
@@ -223,7 +223,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0315/16.jpg" /></p>
-<p>Arbeidarane stoppa det dei halde på med. Dei høyrde på Sakimas vene song. Men éin mann sa: &quot;Ingen har vore i stand til å trøysta sjefen. Trur denne blinde guten at han kan trøysta han?&quot;</p>
+<p>Arbeidarane stoppa det dei halde på med. Dei høyrde på den vene songen til Sakima. Men éin mann sa: &quot;Ingen har vore i stand til å trøysta sjefen. Trur denne blinde guten at han kan trøysta han?&quot;</p>
 <center>
 <strong>15</strong>
 </center>
