--- a/stories/nn/0324_den-dagen-eg-drog-heimanfrå-for-å-dra-til-byen_slides.html
+++ b/stories/nn/0324_den-dagen-eg-drog-heimanfrå-for-å-dra-til-byen_slides.html
@@ -205,7 +205,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0324/14.jpg" /></p>
-<p>Men tankane mine vandra heim. Kjem mora mi til å verta trygg? Kjem kaninane mine til å innbringe nokre pengar? Kjem broren min til å hugsa å vatna dei nyutsprungne trea mine?</p>
+<p>Men tankane mine vandra heim. Kjem mor mi til å verta trygg? Kjem kaninane mine til å innbringe nokre pengar? Kjem bror min til å hugsa å vatna dei nyutsprungne trea mine?</p>
 <center>
 <strong>13</strong>
 </center>
@@ -214,7 +214,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0324/15.jpg" /></p>
-<p>På vegen lærte eg meg utanåt namnet på staden i den store byen der onkelen min budde. Eg mumla enno då eg fall i søvn.</p>
+<p>På vegen lærte eg meg utanåt namnet på staden i den store byen der onkel min budde. Eg mumla enno då eg fall i søvn.</p>
 <center>
 <strong>14</strong>
 </center>
@@ -232,7 +232,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0324/17.jpg" /></p>
-<p>Bussen som skulle tilbake vart fylt opp fort. Det viktigaste for meg no var å byrja å leita etter huset til onkelen min.</p>
+<p>Bussen som skulle tilbake vart fylt opp fort. Det viktigaste for meg no var å byrja å leita etter huset til onkel min.</p>
 <center>
 <strong>16</strong>
 </center>
