--- a/stories/nn/0337_voksborna.html
+++ b/stories/nn/0337_voksborna.html
@@ -98,7 +98,7 @@ Southern African Folktale<br>nynorsk</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0337/09.jpg" /></p>
 
-<p>Voksborna vart leie seg av å sjå broren sin smelte bort.</p>
+<p>Voksborna vart leie seg av å sjå bror sin smelte bort.</p>
 
 <div class="pagenum">8</div>
 <p></div><div class="pagebreak"></p>
@@ -112,7 +112,7 @@ Southern African Folktale<br>nynorsk</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0337/11.jpg" /></p>
 
-<p>Dei tok med seg fuglebroren sin opp på eit høgt fjell.</p>
+<p>Dei tok med seg fuglebror sin opp på eit høgt fjell.</p>
 
 <div class="pagenum">10</div>
 <p></div><div class="pagebreak"></p>
