--- a/stories/nn/0337_voksborna_slides.html
+++ b/stories/nn/0337_voksborna_slides.html
@@ -160,7 +160,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0337/09.jpg" /></p>
-<p>Voksborna vart leie seg av å sjå broren sin smelte bort.</p>
+<p>Voksborna vart leie seg av å sjå bror sin smelte bort.</p>
 <center>
 <strong>8</strong>
 </center>
@@ -178,7 +178,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0337/11.jpg" /></p>
-<p>Dei tok med seg fuglebroren sin opp på eit høgt fjell.</p>
+<p>Dei tok med seg fuglebror sin opp på eit høgt fjell.</p>
 <center>
 <strong>10</strong>
 </center>
