--- a/stories/nn/0342_straff.html
+++ b/stories/nn/0342_straff.html
@@ -63,14 +63,14 @@ Adelheid Marie Bwire<br>nynorsk</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0342/04.jpg" /></p>
 
-<p>Broren min Rahim er grådig. Han smakar på all frukta. Han et mykje av ho.</p>
+<p>Bror min Rahim er grådig. Han smakar på all frukta. Han et mykje av ho.</p>
 
 <div class="pagenum">3</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0342/05.jpg" /></p>
 
-<p>“Sjå kva Rahim gjorde”, ropar veslebroren min. “Rahim er slem og egoistisk”, seier eg.</p>
+<p>“Sjå kva Rahim gjorde”, ropar veslebror min. “Rahim er slem og egoistisk”, seier eg.</p>
 
 <div class="pagenum">4</div>
 <p></div><div class="pagebreak"></p>
