--- a/stories/nn/0342_straff_slides.html
+++ b/stories/nn/0342_straff_slides.html
@@ -115,7 +115,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0342/04.jpg" /></p>
-<p>Broren min Rahim er grådig. Han smakar på all frukta. Han et mykje av ho.</p>
+<p>Bror min Rahim er grådig. Han smakar på all frukta. Han et mykje av ho.</p>
 <center>
 <strong>3</strong>
 </center>
@@ -124,7 +124,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0342/05.jpg" /></p>
-<p>&quot;Sjå kva Rahim gjorde&quot;, ropar veslebroren min. &quot;Rahim er slem og egoistisk&quot;, seier eg.</p>
+<p>&quot;Sjå kva Rahim gjorde&quot;, ropar veslebror min. &quot;Rahim er slem og egoistisk&quot;, seier eg.</p>
 <center>
 <strong>4</strong>
 </center>
