--- a/stories/nb/0002_se-på-dyrene.html
+++ b/stories/nb/0002_se-på-dyrene.html
@@ -63,7 +63,7 @@ Jenny Katz<br>norsk</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0002/04.jpg" /></p>
 
-<p>Geita sier “mæ”.</p>
+<p>Geita sier “mæ, mæ”.</p>
 
 <div class="pagenum">3</div>
 <p></div><div class="pagebreak"></p>
@@ -77,7 +77,7 @@ Jenny Katz<br>norsk</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0002/06.jpg" /></p>
 
-<p>Grisen sier “nøff, nøff”.</p>
+<p>Grisen sier “nøff”.</p>
 
 <div class="pagenum">5</div>
 <p></div><div class="pagebreak"></p>
@@ -91,7 +91,7 @@ Jenny Katz<br>norsk</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0002/08.jpg" /></p>
 
-<p>Hunden sier “voff, voff”.</p>
+<p>Hunden sier “voff”.</p>
 
 <div class="pagenum">7</div>
 <p></div><div class="pagebreak"></p>
