--- a/stories/nb/0052_simbegwire_slides.html
+++ b/stories/nb/0052_simbegwire_slides.html
@@ -196,7 +196,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0052/13.jpg" /></p>
-<p>Simbegwires tante tok med seg barnet til sitt eget hus. Hun ga Simbegwire varm mat, og la henne til å sove med teppet til moren hennes. Den natten gråt Simbegwire i det hun sovnet. Men det var fordi hun var så lettet. Hun visste at tanta hennes ville ta seg av henne.</p>
+<p>Simbegwires tante tok med seg barnet til sitt eget hus. Hun ga Simbegwire varm mat, og la henne til å sove med teppet til moren sin. Den natten gråt Simbegwire i det hun sovnet. Men det var fordi hun var så lettet. Hun visste at tanta hennes ville ta seg av henne.</p>
 <center>
 <strong>12</strong>
 </center>
