--- a/stories/nb/0110_et-lite-frø-historien-om-wangari-maathai.html
+++ b/stories/nb/0110_et-lite-frø-historien-om-wangari-maathai.html
@@ -49,7 +49,7 @@ Nicola Rijsdijk<br>norsk</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0110/02.jpg" /></p>
 
-<p>I en landsby ved foten av Mount Kenya i Øst-Afrika arbeidet en liten pike sammen med moren sin på åkeren. Wangari het hun.</p>
+<p>I en landsby ved foten av Mount Kenya i Øst-Afrika arbeidet en liten jente sammen med moren sin på åkeren. Wangari het hun.</p>
 
 <div class="pagenum">1</div>
 <p></div><div class="pagebreak"></p>
@@ -70,7 +70,7 @@ Nicola Rijsdijk<br>norsk</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0110/05.jpg" /></p>
 
-<p>Wangari var en flink pike og ville gjerne begynne på skolen. Men moren og faren ville at hun skulle være hjemme og hjelpe til. Da hun ble syv år, overtalte storebroren mor og far til å la henne få gå på skolen.</p>
+<p>Wangari var en flink jente og ville gjerne begynne på skolen. Men moren og faren ville at hun skulle være hjemme og hjelpe til. Da hun ble syv år, overtalte storebroren mor og far til å la henne få gå på skolen.</p>
 
 <div class="pagenum">4</div>
 <p></div><div class="pagebreak"></p>
