--- a/stories/nn/0002_sjå-på-dyra.html
+++ b/stories/nn/0002_sjå-på-dyra.html
@@ -63,7 +63,7 @@ Jenny Katz<br>nynorsk</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0002/04.jpg" /></p>
 
-<p>Geita seier “mæ”.</p>
+<p>Geita seier “mæ, mæ”.</p>
 
 <div class="pagenum">3</div>
 <p></div><div class="pagebreak"></p>
@@ -77,7 +77,7 @@ Jenny Katz<br>nynorsk</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0002/06.jpg" /></p>
 
-<p>Grisen seier “nøff, nøff”.</p>
+<p>Grisen seier “nøff”.</p>
 
 <div class="pagenum">5</div>
 <p></div><div class="pagebreak"></p>
@@ -91,7 +91,7 @@ Jenny Katz<br>nynorsk</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0002/08.jpg" /></p>
 
-<p>Hunden seier “voff, voff”.</p>
+<p>Hunden seier “voff”.</p>
 
 <div class="pagenum">7</div>
 <p></div><div class="pagebreak"></p>
