--- a/stories/nn/0002_sjå-på-dyra_slides.html
+++ b/stories/nn/0002_sjå-på-dyra_slides.html
@@ -115,7 +115,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0002/04.jpg" /></p>
-<p>Geita seier &quot;mæ&quot;.</p>
+<p>Geita seier &quot;mæ, mæ&quot;.</p>
 <center>
 <strong>3</strong>
 </center>
@@ -133,7 +133,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0002/06.jpg" /></p>
-<p>Grisen seier &quot;nøff, nøff&quot;.</p>
+<p>Grisen seier &quot;nøff&quot;.</p>
 <center>
 <strong>5</strong>
 </center>
@@ -151,7 +151,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0002/08.jpg" /></p>
-<p>Hunden seier &quot;voff, voff&quot;.</p>
+<p>Hunden seier &quot;voff&quot;.</p>
 <center>
 <strong>7</strong>
 </center>
