--- a/stories/nn/0004_geit-hund-og-ku.html
+++ b/stories/nn/0004_geit-hund-og-ku.html
@@ -49,14 +49,14 @@ Fabian Wakholi<br>nynorsk</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0004/02.jpg" /></p>
 
-<p>Geit, Hund og Ku var gode vener. Ein dag drog dei på ferd med ein buss.</p>
+<p>Geit, Hund og Ku var gode vener. Ein dag drog dei på tur med ein buss.</p>
 
 <div class="pagenum">1</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0004/03.jpg" /></p>
 
-<p>Då dei kom fram, bad sjåføren dei om å betala billetten sin. Ku betalte billetten sin.</p>
+<p>Då dei kom fram, bad sjåføren dei om å betala for billetten sin. Ku betalte for billetten sin.</p>
 
 <div class="pagenum">2</div>
 <p></div><div class="pagebreak"></p>
@@ -91,14 +91,14 @@ Fabian Wakholi<br>nynorsk</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0004/08.jpg" /></p>
 
-<p>Geit stikk når ho høyrer lyden av ein bil. Ho er redd for at ho vil bli arrestert for ikkje å ha betalt billetten.</p>
+<p>Geit stikk når ho høyrer lyden av ein bil. Ho er redd for at ho vil bli arrestert for ikkje å ha betalt for billetten.</p>
 
 <div class="pagenum">7</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0004/09.jpg" /></p>
 
-<p>Og Ku bryr seg ikkje når det kjem ein bil. Ku brukar god tid når ho kryssar vegen fordi ho veit at ho betalte heile billetten sin.</p>
+<p>Og Ku bryr seg ikkje når det kjem ein bil. Ku brukar god tid når ho kryssar vegen fordi ho veit at ho betalte for heile billetten sin.</p>
 
 <div class="pagenum">8</div>
 <p></div><div class="pagebreak"></p>
