--- a/stories/nn/0067_å-laga-mat.html
+++ b/stories/nn/0067_å-laga-mat.html
@@ -91,7 +91,7 @@ Clare Verbeek, Thembani Dladla, Zanele Buthelezi<br>nynorsk</div><div class="pag
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0067/08.jpg" /></p>
 
-<p>Mora mi hakkar løken.</p>
+<p>Mor mi hakkar løken.</p>
 
 <div class="pagenum">7</div>
 <p></div><div class="pagebreak"></p>
