--- a/stories/nn/0095_zama-er-flink.html
+++ b/stories/nn/0095_zama-er-flink.html
@@ -49,7 +49,7 @@ Michael Oguttu<br>nynorsk</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0095/02.jpg" /></p>
 
-<p>Veslebroren min søv veldig seint. Eg vaknar tidleg fordi eg er flink!</p>
+<p>Veslebror min søv veldig seint. Eg vaknar tidleg fordi eg er flink!</p>
 
 <div class="pagenum">1</div>
 <p></div><div class="pagebreak"></p>
