--- a/stories/nn/0095_zama-er-flink_slides.html
+++ b/stories/nn/0095_zama-er-flink_slides.html
@@ -97,7 +97,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0095/02.jpg" /></p>
-<p>Veslebroren min søv veldig seint. Eg vaknar tidleg fordi eg er flink!</p>
+<p>Veslebror min søv veldig seint. Eg vaknar tidleg fordi eg er flink!</p>
 <center>
 <strong>1</strong>
 </center>
