--- a/stories/nn/0129_late-veslebror.html
+++ b/stories/nn/0129_late-veslebror.html
@@ -91,7 +91,7 @@ Clare Verbeek, Thembani Dladla, Zanele Buthelezi<br>nynorsk</div><div class="pag
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0129/08.jpg" /></p>
 
-<p>Kvifor jobbar eg så hardt … … når broren min berre leikar?</p>
+<p>Kvifor jobbar eg så hardt … … når bror min berre leikar?</p>
 
 <div class="pagenum">7</div>
 <p></div><div class="pagebreak"></p>
