--- a/stories/nn/0210_tingi-og-kyrne.html
+++ b/stories/nn/0210_tingi-og-kyrne.html
@@ -49,14 +49,14 @@ Ingrid Schechter<br>nynorsk</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0210/02.jpg" /></p>
 
-<p>Tingi budde saman med bestemora si.</p>
+<p>Tingi budde saman med bestemor si.</p>
 
 <div class="pagenum">1</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0210/03.jpg" /></p>
 
-<p>Han brukte å passa på kyrne med ho.</p>
+<p>Han brukte å passa på kyrne med henne.</p>
 
 <div class="pagenum">2</div>
 <p></div><div class="pagebreak"></p>
@@ -77,7 +77,7 @@ Ingrid Schechter<br>nynorsk</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0210/06.jpg" /></p>
 
-<p>Tingi og bestemora hans sprang og gøymde seg.</p>
+<p>Tingi og bestemor hans sprang og gøymde seg.</p>
 
 <div class="pagenum">5</div>
 <p></div><div class="pagebreak"></p>
@@ -112,7 +112,7 @@ Ingrid Schechter<br>nynorsk</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0210/11.jpg" /></p>
 
-<p>Då det var trygt, kom Tingi og bestemora hans ut.</p>
+<p>Då det var trygt, kom Tingi og bestemor hans ut.</p>
 
 <div class="pagenum">10</div>
 <p></div><div class="pagebreak"></p>
