--- a/stories/nn/0262_magozwe_slides.html
+++ b/stories/nn/0262_magozwe_slides.html
@@ -106,7 +106,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0262/03.jpg" /></p>
-<p>Då Magozwe sine foreldre døydde, var han berre fem år. Han drog for å bu med onkelen sin. Denne mannen brydde seg ikkje om barnet. Han gav ikkje Magozwe nok mat. Han tvinga guten til å jobba hardt.</p>
+<p>Då Magozwe sine foreldre døydde, var han berre fem år. Han drog for å bu med onkel sin. Denne mannen brydde seg ikkje om barnet. Han gav ikkje Magozwe nok mat. Han tvinga guten til å jobba hardt.</p>
 <center>
 <strong>2</strong>
 </center>
@@ -115,7 +115,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0262/04.jpg" /></p>
-<p>Viss Magozwe klaga eller stilte spørsmål, slo onkelen hans han. Når Magozwe spurde om han kunne gå på skulen, slo onkelen hans han og sa: &quot;Du er for dum til å læra noko som helst.&quot; Etter tre år med denne behandlinga rømde Magozwe frå onkelen sin. Han byrja å bu på gata.</p>
+<p>Viss Magozwe klaga eller stilte spørsmål, slo onkel hans han. Når Magozwe spurde om han kunne gå på skulen, slo onkel hans han og sa: &quot;Du er for dum til å læra noko som helst.&quot; Etter tre år med denne behandlinga rømde Magozwe frå onkel sin. Han byrja å bu på gata.</p>
 <center>
 <strong>3</strong>
 </center>
@@ -178,7 +178,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0262/11.jpg" /></p>
-<p>Då dei møttest, byrja Magozwe å fortelja si eiga historie til Thomas. Det var historia om onkelen hans og kvifor han rømde heimanfrå. Thomas snakka ikkje mykje, og han sa ikkje til Magozwe kva han skulle gjera, men han lytta alltid oppmerksamt. Nokre gonger snakka dei saman medan dei åt i det gule huset med det blå taket.</p>
+<p>Då dei møttest, byrja Magozwe å fortelja si eiga historie til Thomas. Det var historia om onkel hans og kvifor han rømde heimanfrå. Thomas snakka ikkje mykje, og han sa ikkje til Magozwe kva han skulle gjera, men han lytta alltid oppmerksamt. Nokre gonger snakka dei saman medan dei åt i det gule huset med det blå taket.</p>
 <center>
 <strong>10</strong>
 </center>
@@ -196,7 +196,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0262/13.jpg" /></p>
-<p>Magozwe tenkte på denne nye staden og på å gå på skulen. Kva om onkelen hans hadde rett og han var for dum til å læra noko? Kva om dei slo han på denne nye staden? Han var redd. &quot;Kanskje det er betre å bu på gata&quot;, tenkte han.</p>
+<p>Magozwe tenkte på denne nye staden og på å gå på skulen. Kva om onkel hans hadde rett og han var for dum til å læra noko? Kva om dei slo han på denne nye staden? Han var redd. &quot;Kanskje det er betre å bu på gata&quot;, tenkte han.</p>
 <center>
 <strong>12</strong>
 </center>
